# churros

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  cabal.project  churros.cabal  hie.yaml  publish.sh
.github/workflows/: test.yml
churros-fgl/: CHANGELOG.md  churros-fgl.cabal
churros-fgl/src/Data/Churro/: Example.hs  FGL.hs
src/Control/: Churro.hs
src/Control/Churro/: Prelude.hs  Transport.hs  Types.hs
src/Control/Churro/Transport/: Chan.hs  MVar.hs  Unagi.hs
src/Control/Churro/Transport/MVar/: Latest.hs
src/Control/Churro/Transport/Unagi/: Bounded.hs
test/: graph.dot
test/Churro/Test/: Examples.hs  Main.hs
