cabal-version:       2.2
name:                churros
version:             0.1.0.0
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- copyright:
-- category:

common churros-dependencies
  default-language: Haskell2010
  build-depends:
    base,
    time,
    async,
    stm,
    containers,
    random

library churros-lib
  import: churros-dependencies
  hs-source-dirs:   src
  exposed-modules:
    Control.Churro,
    Control.Churro.Types,
    Control.Churro.Prelude,
    Control.Churro.Transport,
    Control.Churro.Transport.Chan

test-suite churros-test
  import:            churros-dependencies
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src,test
  main-is:           Churro/Test/Main.hs
  other-modules:
    Control.Churro,
    Control.Churro.Prelude,
    Control.Churro.Transport,
    Control.Churro.Transport.Chan,
    Control.Churro.Types
