cabal-version:       >=1.10
name:                churros-fgl
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    base <5,
    fgl,
    churros,
    graphviz
  exposed-modules:
    Data.Churro.FGL
